# eozilla

./: .gitignore  404.html  AGENTS.md  CHANGES.md  CONTRIBUTING.md  README.md  deps-docs-ok.txt  docs-ok-deps.txt  index.html  mkdocs.yml  objects.inv  prompt-for-processes-ui.md  pyproject.toml
.codex/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-pypi.yaml
_pkg_reservations/appligator/: meta.yaml
_pkg_reservations/cuiman/: meta.yaml
_pkg_reservations/gavicore/: meta.yaml
_pkg_reservations/wraptile/: meta.yaml
_reservations/: reserve.md
_reservations/eozilla/: meta.yaml
_reservations/procodile/: meta.yaml
appligator/: README.md  index.html  pyproject.toml
appligator/cli/: index.html
appligator/gen_dockerfile/: index.html
appligator/introduction/: index.html
appligator/src/appligator/: __init__.py  cli.py  config.py
appligator/src/tests/: test_version.py
appligator/tests/: test_cli.py  test_config.py
appligator/tests/airflow/: test_gen_dockerfile.py  test_gen_image.py  test_gen_workflow_dag.py  test_renderer.py  test_run_step.py  test_workflow_to_ir.py
appligator/usage/: index.html
architecture/: index.html
client-api/: index.html
client-cli/: index.html
contributing/: index.html
cuiman/: README.md  index.html  pyproject.toml
cuiman-ai/: README.md  pyproject.toml
cuiman-ai/src/cuiman_ai/: __init__.py  bridge.py  cli.py  server.py
cuiman/api/: index.html
cuiman/cli/: index.html
cuiman/configuration/: index.html
cuiman/customization/: index.html
cuiman/gui-generation/: index.html
cuiman/introduction/: index.html
cuiman/src/cuiman/: __init__.py
cuiman/src/tests/: helpers.py
cuiman/tests/: helpers.py
cuiman/tests/api/: test_async_client.py  test_client.py  test_client_app_mixin.py  test_client_opener.py  test_client_ui_mixin.py  test_config.py  test_ishell.py  test_jobs.py  test_openers.py  test_runsync.py  test_service_client.py  test_ui_filter.py
cuiman/tests/app/: test_app.py  test_display.py  test_init.py  test_serve.py  test_service.py  test_state.py  test_store.py  test_url.py
cuiman/tests/cli/: test_cli.py  test_client.py  test_config.py  test_output.py
cuiman/tests/gui/: test_client.py  test_field.py  test_jobs_event_bus.py  test_main_panel.py
cuiman/tests/ui/: test_field.py  test_fieldmeta.py  test_libui.py  test_vm.py
docs/: architecture.md  client-api.md  client-cli.md  client-config.md  client-custom.md  contributing.md  index.md  process-dev.md  roadmap.md  workflow-dev.md
docs/appligator/: cli.md  gen_dockerfile.md  index.md  introduction.md  usage.md
docs/cuiman/: api.md  cli.md  configuration.md  customization.md  gui-generation.md  index.md  introduction.md
docs/gavicore/: api-models.md  api-service.md  api-ui.md  api-util.md  index.md  introduction.md  overview.md
docs/gavicore/models/: api.md  description.md
docs/gavicore/service/: api.md  description.md
docs/gavicore/ui/: api.md  description.md
docs/gavicore/util/: api.md  description.md
docs/hooks/: notebooks_json_output.py
docs/notebooks/: README.md
docs/overrides/css/: custom.css
docs/procodile/: api.md  cli.md  index.md  introduction.md  usage.md  workflow-dev.md
docs/wraptile/: cli.md  customization.md  index.md  introduction.md  usage.md
eozilla/: README.md  pyproject.toml
eozilla-airflow/: README.md  pyproject.toml
eozilla-airflow/dags/: primes_between.py  return_base_model.py  simulate_scene.py  sleep_a_while.py
eozilla-airflow/tests/dags/: test_example_dag.py
eozilla-app-ex/: Dockerfile  README.md  pyproject.toml
eozilla-app-ex/src/s2gos_app_ex/: cli.py
eozilla/tests/: test_packages.py
gavicore/: README.md  gui-generation.md  index.html  pyproject.toml
gavicore/tests/: test_dru_models.py  test_dru_service.py  test_errors.py  test_models.py  test_service.py  test_testing.py
gavicore/ui/api/: index.html
hooks/notebooks_json_output/: index.html
notebooks/: client-api-airflow.ipynb  client-api.ipynb  client-cli.ipynb  client-gui.ipynb  cuiman-api-airflow.ipynb  cuiman-api.ipynb  cuiman-app.ipynb  cuiman-cli.ipynb  cuiman-gui.ipynb  cuiman-opener.ipynb  cuiman-openers.ipynb  cuiman-react-app.ipynb  index.html  react_app.py  simulate-scene-request.json
notebooks/client-api/: index.html
notebooks/client-api-airflow/: index.html
notebooks/client-cli/: index.html
notebooks/client-gui/: index.html
notebooks/cuiman-api/: index.html
notebooks/cuiman-api-airflow/: index.html
notebooks/cuiman-cli/: index.html
notebooks/cuiman-gui/: index.html
notebooks/cuiman-openers/: index.html
notebooks/process/: client-api.ipynb  client-cli.ipynb  client-gui.ipynb
notebooks/workflow/: client-api-airflow.ipynb  client-api.ipynb  client-cli.ipynb  client-gui.ipynb
process-dev/: index.html
procodile/: README.md  index.html  pyproject.toml
procodile-example/: Dockerfile  README.md  pyproject.toml
procodile-example/src/procodile_example/: __init__.py  cli.py  processes.py  workflow.py  workflow_funcs.py  workflows.py
procodile/api/: index.html
procodile/cli/: index.html
procodile/introduction/: index.html
procodile/tests/: test_artifacts.py  test_job.py  test_process.py  test_pydantic.py  test_registry.py  test_reporter.py  test_schema.py  test_workflow.py  utils.py
procodile/usage/: index.html
procodile/workflow-dev/: index.html
request-format/: index.html
roadmap/: index.html
s2gos-airflow/: README.md  pyproject.toml
s2gos-app-ex/: Dockerfile  pyproject.toml
s2gos-client/: pyproject.toml
s2gos-common/: pyproject.toml
s2gos-server/: pyproject.toml
search/: search_index.json
tools/: common.py  format.py  gen_cli_docs.py  gen_client.py  gen_client_docs.py  gen_dags.py  gen_models.py  gen_server.py  openapi.py  openapi.yaml  sync_versions.py
wraptile/: README.md  index.html  pyproject.toml
wraptile/cli/: index.html
wraptile/customization/: index.html
wraptile/introduction/: index.html
wraptile/tests/: test_app.py  test_cli.py  test_exceptions.py  test_main.py  test_provider.py
wraptile/usage/: index.html
(+463 files in other folders)
