[project]
name = "eozilla"
version = "0.0.9.dev0"
description = "A suite of tools around workflow orchestration systems and the OGC API - Processes"
requires-python = ">=3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# Combined sub-workspace dependencies to prevent our editable
# PyPI dependencies (our project's sub-workspaces) to install
# PyPI packages instead of using conda packages.
click = "*"
fastapi = "*"
httpx = "*"
pydantic = "*"
pydantic-settings = "*"
pyyaml = "*"
typer = "*"
uri-template = "*"
uvicorn = "*"
# IDE integration
pixi-pycharm = ">=0.0.8,<0.0.9"
# Development & build tools
pip = "*"
hatch = "*"
# Build for publication
rattler-build = ">=0.48.1,<0.49"
twine = ">=6.2.0,<7"
# Code style & linting
isort = "*"
ruff = "*"
mypy = "*"
# Unit-testing
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
# GUI testing
ipyleaflet = "*"
ipywidgets = "*"
ipywidgets_bokeh = "*"
jupyter = "*"
notebook = "*"
panel = "*"
watchfiles = "*"
# Use cases testing
dask = "*"
xarray = "*"
zarr = "*"
# Needed in /tools
datamodel-code-generator = "*"
tomlkit = "*"  # to sync versions
# Documentation
mkdocs = "*"
mkdocs-autorefs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-jupyter = "*"
nbformat = "*"
# For mermaid diagrams
pymdown-extensions = "*"
anaconda-client = ">=1.13.0,<2"
graphviz = ">=13.1.2,<14"
python-graphviz = ">=0.21,<0.22"

[tool.pixi.pypi-dependencies]
# For PyPI builds (maybe replace by some pixi-friendly tool)
build = ">=1.3.0,<2"
# I wished we could have "no-deps=true" here,
# or even better "[tool.pixi.workspaces]".
# See https://github.com/prefix-dev/pixi/issues/1417.
appligator = { path = "./appligator", editable = true }
cuiman = { path = "./cuiman", editable = true }
eozilla = { path = "./eozilla", editable = true }
gavicore = { path = "./gavicore", editable = true }
procodile = { path = "./procodile", editable = true }
procodile-example = { path = "./procodile-example", editable = true }
wraptile = { path = "./wraptile", editable = true }
# Airflow is only available on PyPI
apache-airflow-client = "==3.0.2"
# Documentation
# For mermaid diagrams
mkdocs-mermaid2-plugin = "*"

[tool.isort]
skip = [".idea", ".github", ".pixi", "htmlcov", "site"]
profile = "black"
line_length = 88
known_first_party = [
    "appligator",
    "cuiman",
    "eozilla",
    "gavicore",
    "procodile",
    "procodile_example",
    "wraptile",
]

[tool.black]
line-length = 88

[tool.ruff]
include = [
    "appligator/**/*.py",
    "cuiman/**/*.py",
    "eozilla/**/*.py",
    "gavicore/**/*.py",
    "wraptile/**/*.py",
    "notebooks/**/*.py",
    "procodile/**/*.py",
    "procodile-example/**/*.py",
    "tools/**/*.py",
]

[tool.ruff.lint]
select = [
    "B", # pycodestyle (coding style)
    "E", # pyflakes (basic errors)
    "F", # bugbear (common logic issues)
    "I", # Isort (import order)
    "S", # Bandit (security checks)
]
ignore = [
    "E501",  # line-too-long
    "I001",  # unsorted-imports
    "S101", # assert
]
per-file-ignores = { "*.ipynb" = ["E402"] }
isort = { relative-imports-order = "closest-to-furthest" }

[tool.coverage.report]
omit = [
    "procodile-example/src/**/*",
    "cuiman/src/cuiman/gui/**/*",
    "wraptile/src/wraptile/services/airflow/**/*",
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disable_error_code = ["valid-type", "import-untyped"]
exclude = [
    "appligator/tests",
    "cuiman/tests",
    "eozilla/tests",
    "eozilla-airflow",
    "gavicore/tests",
    "wraptile/tests",
    "procodile/tests",
    "procodile-example/tests",
    "tools",
    "_pkg_reservations",
]
[[tool.mypy.overrides]]
module = "gavicore.models"
disable_error_code = ["valid-type"]

########################## Tasks ###############################

# pixi run test

[tool.pixi.tasks.tests]
depends-on = [
    "test-appligator",
    "test-cuiman",
    "test-eozilla",
    "test-gavicore",
    "test-procodile",
    "test-wraptile",
]

[tool.pixi.tasks.test-appligator]
cmd = "pytest appligator/tests"

[tool.pixi.tasks.test-cuiman]
cmd = "pytest cuiman/tests"

[tool.pixi.tasks.test-eozilla]
cmd = "pytest eozilla/tests"

[tool.pixi.tasks.test-gavicore]
cmd = "pytest gavicore/tests"

[tool.pixi.tasks.test-procodile]
cmd = "pytest procodile/tests"

[tool.pixi.tasks.test-wraptile]
cmd = "pytest wraptile/tests"


# pixi run coverage / coverage-ci

[tool.pixi.tasks.coverage]
depends-on = ["cov-modules", "cov-report-html"]

[tool.pixi.tasks.coverage-ci]
depends-on = ["cov-modules", "cov-report-xml"]

[tool.pixi.tasks.cov-modules]
depends-on = [
    "cov-appligator",
    "cov-cuiman",
    "cov-eozilla",
    "cov-gavicore",
    "cov-wraptile",
    "cov-procodile",
]

[tool.pixi.tasks.cov-report-html]
cmd = "coverage html -d .cov-report && coverage report"

[tool.pixi.tasks.cov-report-xml]
cmd = "coverage xml -o coverage.xml && coverage report"

[tool.pixi.tasks.cov-appligator]
cmd = "pytest --cov appligator/src/appligator --cov-report= --cov-append appligator/tests"

[tool.pixi.tasks.cov-cuiman]
cmd = "pytest --cov cuiman/src/cuiman --cov-report= --cov-append cuiman/tests"

[tool.pixi.tasks.cov-eozilla]
cmd = "pytest --cov eozilla/src/eozilla --cov-report= --cov-append eozilla/tests"

[tool.pixi.tasks.cov-gavicore]
cmd = "pytest --cov gavicore/src/gavicore --cov-report= --cov-append gavicore/tests"

[tool.pixi.tasks.cov-procodile]
cmd = "pytest --cov procodile/src/procodile --cov-report= --cov-append procodile/tests"

[tool.pixi.tasks.cov-wraptile]
cmd = "pytest --cov wraptile/src/wraptile --cov-report= --cov-append wraptile/tests"

# pixi run format

[tool.pixi.tasks.format]
cmd = "python tools/format.py"

# pixi run check

[tool.pixi.tasks.checks]
depends-on = [
    "check-appligator",
    "check-cuiman",
    "check-eozilla",
    "check-gavicore",
    "check-procodile",
    "check-wraptile",
    "typecheck"
]

[tool.pixi.tasks.check-appligator]
cmd = "ruff check appligator/src"

[tool.pixi.tasks.check-cuiman]
cmd = "ruff check cuiman/src"

[tool.pixi.tasks.check-eozilla]
cmd = "ruff check eozilla/src"

[tool.pixi.tasks.check-gavicore]
cmd = "ruff check gavicore/src"

[tool.pixi.tasks.check-procodile]
cmd = "ruff check procodile/src"

[tool.pixi.tasks.check-wraptile]
cmd = "ruff check wraptile/src"

[tool.pixi.tasks.typecheck]
cmd = "mypy ."

# pixi run generate

[tool.pixi.tasks.generate]
depends-on = [
    "gen-models",
    "gen-server",
    "gen-client",
    "gen-client-docs",
]

[tool.pixi.tasks.gen-models]
cmd = "python -m tools.gen_models"

[tool.pixi.tasks.gen-server]
cmd = "python -m tools.gen_server"

[tool.pixi.tasks.gen-client]
cmd = "python -m tools.gen_client"

[tool.pixi.tasks.gen-client-docs]
cmd = "python -m tools.gen_client_docs"

[tool.pixi.tasks.gen-dags]
cmd = "appligator wraptile.services.local.testing:service.process_registry"

# pixi run build

[tool.pixi.tasks.build]
depends-on = [
  "build-appligator",
  "build-cuiman",
  "build-eozilla",
  "build-gavicore",
  "build-procodile",
  "build-wraptile",
]

[tool.pixi.tasks.build-appligator]
cwd = "appligator"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-cuiman]
cwd = "cuiman"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-eozilla]
cwd = "eozilla"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-gavicore]
cwd = "gavicore"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-procodile]
cwd = "procodile"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-wraptile]
cwd = "wraptile"
cmd = "hatch build --clean"

# pixi run deploy-check

[tool.pixi.tasks.deploy-check]
depends-on = [
  "deploy-check-appligator",
  "deploy-check-cuiman",
  "deploy-check-eozilla",
  "deploy-check-gavicore",
  "deploy-check-procodile",
  "deploy-check-wraptile",
]

[tool.pixi.tasks.deploy-check-appligator]
cwd = "appligator"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-cuiman]
cwd = "cuiman"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-eozilla]
cwd = "eozilla"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-gavicore]
cwd = "gavicore"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-procodile]
cwd = "procodile"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-wraptile]
cwd = "wraptile"
cmd = "python -m twine check dist/*"

# pixi run deploy
# Note: this task requires PyPI credentials to be either provided
# env var pair or as .pypirc/
#   TWINE_USERNAME=__twine__
#   TWINE_PASSWORD=pypi-f34h6dadf2.....

[tool.pixi.tasks.deploy]
depends-on = [
  "deploy-appligator",
  "deploy-cuiman",
  "deploy-eozilla",
  "deploy-gavicore",
  "deploy-procodile",
  "deploy-wraptile",
]

[tool.pixi.tasks.deploy-appligator]
cwd = "appligator"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-cuiman]
cwd = "cuiman"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-eozilla]
cwd = "eozilla"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-gavicore]
cwd = "gavicore"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-procodile]
cwd = "procodile"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-wraptile]
cwd = "wraptile"
cmd = "python -m twine upload dist/*"


# pixi run sync-versions

[tool.pixi.tasks.sync-versions]
cmd = "python -m tools.sync_versions"

# docs

[tool.pixi.tasks.docs-serve]
cmd = "mkdocs serve"

[tool.pixi.tasks.docs-build]
cmd = "mkdocs build"


[tool.coverage.run]
# TODO: remove this when `gen_image` is implemented
omit = [
    'appligator/src/appligator/airflow/gen_image.py'
]
