[project]
name = "eozilla"
version = "0.2.0.dev1"
description = "A suite of tools around workflow orchestration systems and the OGC API - Processes"
requires-python = ">=3.11"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# Combined sub-workspace dependencies to prevent our editable
# PyPI dependencies (our project's sub-workspaces) to install
# PyPI packages instead of using conda packages.
fastapi = "*"
httpx = "*"
pydantic = "*"
pydantic-settings = "*"
pyyaml = "*"
typer = ">=0.26.0"
uri-template = "*"
uvicorn = "*"
# IDE integration
pixi-pycharm = ">=0.0.11"
# Development & build tools
pip = "*"
hatch = "*"
# Build for publication
rattler-build = ">=0.48.1,<0.49"
twine = ">=6.2.0,<7"
# Code style & linting
isort = "*"
ruff = "*"
mypy = "*"
# Unit-testing
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
# Notebooks
jupyter = "*"
notebook = "*"
watchfiles = "*"
# Use cases testing
dask = "*"
geopandas = "*"
pandas = "*"
xarray = "*"
# zarr 3.2.x can no longer work with Windows file URIs, like file:///C:/...
zarr = ">=3.1,<3.2"
# Needed in /tools
tomlkit = "*"  # to sync versions
# Documentation
mkdocs = "==1.6.1"
mkdocs-autorefs = ">=1.4.3,<1.5"
mkdocs-get-deps = ">=0.2,<0.3"
mkdocs-jupyter = ">=0.25.1,<0.26"
mkdocs-material = ">=9.7.1,<9.8"
mkdocs-material-extensions = ">=1.3.1,<1.4"
mkdocstrings = ">=1.0.0,<1.1"
mkdocstrings-python = ">=2.0.1,<2.1"
nbformat = ">=5.10.4,<5.11"
pygments = ">=2.19,<2.20"
# For mermaid diagrams
pymdown-extensions = ">=10.20,<10.21"
anaconda-client = ">=1.13.0,<2"
graphviz = ">=13.1.2,<14"
python-graphviz = ">=0.21,<0.22"
griffe-pydantic = ">=1.3.1,<2"

[tool.pixi.pypi-dependencies]
# For PyPI builds (maybe replace by some pixi-friendly tool)
build = ">=1.3.0,<1.5.1"
# I wished we could have "no-deps=true" here,
# or even better "[tool.pixi.workspaces]".
# See https://github.com/prefix-dev/pixi/issues/1417.
appligator = { path = "./appligator", editable = true }
cuiman = { path = "./cuiman", editable = true }
eozilla = { path = "./eozilla", editable = true }
gavicore = { path = "./gavicore", editable = true }
procodile = { path = "./procodile", editable = true }
procodile-example = { path = "./procodile-example", editable = true }
wraptile = { path = "./wraptile", editable = true }
# Cuiman GUI
remotestate = ">=0.3.3,<1"
# remotestate = { path = "../remotestate/remotestate-py", editable = true }
# Airflow is only available on PyPI
apache-airflow-client = "==3.0.2"
# Documentation
# For mermaid diagrams
mkdocs-mermaid2-plugin = ">=1.2.3,<1.3"

[tool.isort]
skip = [".idea", ".github", ".pixi", "htmlcov", "site"]
profile = "black"
line_length = 88
known_first_party = [
    "appligator",
    "cuiman",
    "eozilla",
    "gavicore",
    "procodile",
    "procodile_example",
    "wraptile",
]

[tool.black]
line-length = 88

[tool.ruff]
include = [
    "appligator/**/*.py",
    "cuiman/**/*.py",
    "eozilla/**/*.py",
    "gavicore/**/*.py",
    "wraptile/**/*.py",
    "notebooks/**/*.py",
    "procodile/**/*.py",
    "procodile-example/**/*.py",
    "tools/**/*.py",
]

[tool.ruff.lint]
select = [
    "B", # pycodestyle (coding style)
    "E", # pyflakes (basic errors)
    "F", # bugbear (common logic issues)
    "I", # Isort (import order)
    "S", # Bandit (security checks)
]
ignore = [
    "E501",  # line-too-long
    "I001",  # unsorted-imports
    "S101", # assert
]
per-file-ignores = { "*.ipynb" = ["E402"] }
isort = { relative-imports-order = "closest-to-furthest" }

[tool.coverage.report]
omit = [
    "procodile-example/src/**/*",
    "wraptile/src/wraptile/services/airflow/**/*",
]

[tool.coverage.run]
# TODO: remove this when `gen_image` is implemented
omit = [
    'appligator/src/appligator/airflow/gen_image.py'
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disable_error_code = ["import-untyped"]
plugins = ["pydantic.mypy"]
exclude = [
    "appligator/tests",
    "cuiman/tests",
    "eozilla/tests",
    "eozilla-airflow",
    "gavicore/tests",
    "wraptile/tests",
    "procodile/tests",
    "procodile-example/tests",
    "tools",
    "_pkg_reservations",
]

########################## Tasks ###############################

# pixi run test

[tool.pixi.tasks]
test-appligator = "pytest appligator/tests"
test-cuiman = "pytest cuiman/tests"
test-eozilla = "pytest eozilla/tests"
test-gavicore = "pytest gavicore/tests"
test-procodile = "pytest procodile/tests"
test-wraptile = "pytest wraptile/tests"
cov-report-html = "coverage html -d .cov-report && coverage report"
cov-report-xml = "coverage xml -o coverage.xml && coverage report"
cov-appligator = "pytest --cov appligator/src/appligator --cov-report= --cov-append appligator/tests"
cov-cuiman = "pytest --cov cuiman/src/cuiman --cov-report= --cov-append cuiman/tests"
cov-eozilla = "pytest --cov eozilla/src/eozilla --cov-report= --cov-append eozilla/tests"
cov-gavicore = "pytest --cov gavicore/src/gavicore --cov-report= --cov-append gavicore/tests"
cov-procodile = "pytest --cov procodile/src/procodile --cov-report= --cov-append procodile/tests"
cov-wraptile = "pytest --cov wraptile/src/wraptile --cov-report= --cov-append wraptile/tests"
format = "python tools/format.py"
check-appligator = "ruff check appligator/src"
check-cuiman = "ruff check cuiman/src"
check-eozilla = "ruff check eozilla/src"
check-gavicore = "ruff check gavicore/src"
check-procodile = "ruff check procodile/src"
check-wraptile = "ruff check wraptile/src"
typecheck = "mypy ."
gen-server = "python -m tools.gen_server"
gen-client = "python -m tools.gen_client"
gen-cli-docs = "python -m tools.gen_cli_docs"
gen-dags = "appligator wraptile.services.local.testing:service.process_registry"
sync-versions = "python -m tools.sync_versions"
jl = "jupyter-lab"
serve = "wraptile run -- wraptile.services.local.testing:service"
serve-docs = "mkdocs serve"
build-docs = "mkdocs build"

[tool.pixi.tasks.tests]
depends-on = [
    "test-appligator",
    "test-cuiman",
    "test-eozilla",
    "test-gavicore",
    "test-procodile",
    "test-wraptile",
]


# pixi run coverage / coverage-ci

[tool.pixi.tasks.coverage]
depends-on = ["cov-modules", "cov-report-html"]

[tool.pixi.tasks.coverage-ci]
depends-on = ["cov-modules", "cov-report-xml"]

[tool.pixi.tasks.cov-modules]
depends-on = [
    "cov-appligator",
    "cov-cuiman",
    "cov-eozilla",
    "cov-gavicore",
    "cov-wraptile",
    "cov-procodile",
]

# pixi run check

[tool.pixi.tasks.checks]
depends-on = [
    "check-appligator",
    "check-cuiman",
    "check-eozilla",
    "check-gavicore",
    "check-procodile",
    "check-wraptile",
    "typecheck"
]

# pixi run generate

[tool.pixi.tasks.generate]
depends-on = [
    "gen-server",
    "gen-client",
    "gen-cli-docs",
]

# pixi run build

[tool.pixi.tasks.build]
depends-on = [
  "build-appligator",
  "build-cuiman",
  "build-eozilla",
  "build-gavicore",
  "build-procodile",
  "build-wraptile",
]

[tool.pixi.tasks.build-appligator]
cwd = "appligator"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-cuiman]
cwd = "cuiman"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-eozilla]
cwd = "eozilla"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-gavicore]
cwd = "gavicore"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-procodile]
cwd = "procodile"
cmd = "hatch build --clean"

[tool.pixi.tasks.build-wraptile]
cwd = "wraptile"
cmd = "hatch build --clean"

# pixi run deploy-check

[tool.pixi.tasks.deploy-check]
depends-on = [
  "deploy-check-appligator",
  "deploy-check-cuiman",
  "deploy-check-eozilla",
  "deploy-check-gavicore",
  "deploy-check-procodile",
  "deploy-check-wraptile",
]

[tool.pixi.tasks.deploy-check-appligator]
cwd = "appligator"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-cuiman]
cwd = "cuiman"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-eozilla]
cwd = "eozilla"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-gavicore]
cwd = "gavicore"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-procodile]
cwd = "procodile"
cmd = "python -m twine check dist/*"

[tool.pixi.tasks.deploy-check-wraptile]
cwd = "wraptile"
cmd = "python -m twine check dist/*"

# pixi run deploy
# Note: this task requires PyPI credentials to be either provided
# env var pair or as .pypirc/
#   TWINE_USERNAME=__twine__
#   TWINE_PASSWORD=pypi-f34h6dadf2.....

[tool.pixi.tasks.deploy]
depends-on = [
  "deploy-appligator",
  "deploy-cuiman",
  "deploy-eozilla",
  "deploy-gavicore",
  "deploy-procodile",
  "deploy-wraptile",
]

[tool.pixi.tasks.deploy-appligator]
cwd = "appligator"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-cuiman]
cwd = "cuiman"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-eozilla]
cwd = "eozilla"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-gavicore]
cwd = "gavicore"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-procodile]
cwd = "procodile"
cmd = "python -m twine upload dist/*"

[tool.pixi.tasks.deploy-wraptile]
cwd = "wraptile"
cmd = "python -m twine upload dist/*"

