[project]
name = "cuiman-ai"
version = "0.0.1.dev0"
description = "AI-facing adapters for cuiman and OGC API - Processes services"
requires-python = ">= 3.12"
authors = [{name = "Norman Fomferra", email = "norman.fomferra@brockmann-consult.de"}]
dependencies = [
    "cuiman",
    "httpx",
    "mcp[cli]>=1.2.0",
    "pydantic",
    "typer",
]

[project.scripts]
cuiman-ai = "cuiman_ai.cli:main"
cuiman-ai-mcp = "cuiman_ai.cli:mcp_main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
sources = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
# Combined sub-workspace dependencies to prevent our editable
# PyPI dependencies (our project's sub-workspaces) to install
# PyPI packages instead of using conda packages.
fastapi = "*"
httpx = "*"
pydantic = "*"
pyyaml = "*"
typer = "*"
# IDE integration
pixi-pycharm = ">=0.0.11"
# Development & build tools
pip = "*"
hatch = "*"
# Build for publication
rattler-build = ">=0.48.1,<0.49"
twine = ">=6.2.0,<7"
# Code style & linting
isort = "*"
ruff = "*"
mypy = "*"
# Unit-testing
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.pixi.pypi-dependencies]
# source package
cuiman_ai = { path = ".", editable = true }
# eozilla source packages
cuiman = { path = "../cuiman", editable = true }
gavicore = { path = "../gavicore", editable = true }
# PyPI-only depedencies
mcp = { version = ">=1.2.0", extras = ["cli"] }

[tool.pixi.tasks]
check = "python -m compileall src"
mcp = "cuiman-ai mcp"
